<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/teal_200"
    android:gravity="center"
    tools:context=".Register_Page">

    <TextView
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-condensed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_cpunt"
        />

    <EditText
        android:inputType="textEmailAddress"
        android:id="@+id/mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mail"
        android:layout_margin="10dp"
        android:background="@drawable/arrondire"
        android:padding="15sp"
        />
    <EditText
        android:inputType="textAutoComplete"
        android:id="@+id/passeword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passe"
        android:drawablePadding="5dp"
        android:layout_margin="10dp"
        android:background="@drawable/arrondire"
        android:padding="15sp"
        />
    <EditText
        android:inputType="textAutoComplete"
        android:id="@+id/confirmer_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirmer"
        android:drawablePadding="5dp"
        android:layout_margin="10dp"
        android:background="@drawable/arrondire"
        android:padding="15sp"
        />
    <ProgressBar
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressbar"
        android:indeterminate="true"
        android:layout_margin="5dp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btn_valider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/arro_btn"
            android:text="@string/valider"
            android:textAllCaps="false"
            android:textColor="@color/black" />


        <TextView
            android:id="@+id/compte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:text="@string/compte"
            android:textColor="@color/black"
            android:textStyle="normal" />
    </RelativeLayout>

</LinearLayout>